[package]
name = "simple-wallet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = {version = "0.16.0", features = ["rand"] }
tokio = "1.9.0"
secp256k1 = {version = "0.20.3", features = ["rand"] }
tiny-keccak = "2.0.2"
anyhow = "1.0.42"
